# ChangeLog for sci-mathematics/octave-forge
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave-forge/ChangeLog,v 1.28 2008/07/23 17:19:32 markusle Exp $

  23 Jul 2008; Markus Dittrich <markusle@gentoo.org>
  octave-forge-2006.03.17.ebuild, octave-forge-2006.03.17-r1.ebuild:
  Adjusted dependencies to exclude octave-3* since the 
  monolithic octave-forge ebuilds do not work with it.

  27 Apr 2008; Markus Dittrich <markusle@gentoo.org>
  +files/octave-forge-2006.03.17-gcc43.patch,
  octave-forge-2006.03.17-r1.ebuild:
  Added patch to enable compilation against gcc-4.3 (fixes bug #219392).
  Thanks much to Peter Alfredsen <peter.alfredsen@gmail.com> for it.

  20 Mar 2008; Markus Dittrich <markusle@gentoo.org>
  +files/octave-forge-2006.03.17-imagemagick.patch,
  -octave-forge-2004.11.16-r2.ebuild, -octave-forge-2005.06.13-r1.ebuild,
  octave-forge-2006.03.17.ebuild, octave-forge-2006.03.17-r1.ebuild:
  Added patch to allow compilation against imagemagick-6.3.9* (see bug
  #213980). Thanks much to Ed Catmur <ed@catmur.co.uk> for his patch.
  Also removed old versions.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing metalgod from metadata.xml as per #99350.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  octave-forge-2006.01.28.ebuild, octave-forge-2006.03.17.ebuild,
  octave-forge-2006.03.17-r1.ebuild:
  Drop virtual/x11 references.

  13 Jul 2007; Markus Dittrich <markusle@gentoo.org>
  -octave-forge-2004.11.16-r1.ebuild, -octave-forge-2005.06.13.ebuild,
  octave-forge-2006.01.28.ebuild, octave-forge-2006.03.17.ebuild,
  octave-forge-2006.03.17-r1.ebuild:
  Removed old versions and got rid of the libtermcap-compat 
  dependency (see bug #103105).

*octave-forge-2006.03.17-r1 (13 Apr 2007)

  13 Apr 2007; Markus Dittrich <markusle@gentoo.org>
  +files/octave-forge-config-fix.patch, +octave-forge-2006.03.17-r1.ebuild: