@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>sci-mathematics</herd>
+<herd>sci-mathematics</herd>
+<use>
+  <flag name='qhull'>Add support for <pkg>media-libs/qhull</pkg>
+    (geometric extensions)</flag>
+</use>
 </pkgmetadata>
