@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/octave-forge
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave-forge/ChangeLog,v 1.28 2008/07/23 17:19:32 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave-forge/ChangeLog,v 1.29 2008/08/06 20:44:05 ulm Exp $
+
+  06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   23 Jul 2008; Markus Dittrich <markusle@gentoo.org>
   octave-forge-2006.03.17.ebuild, octave-forge-2006.03.17-r1.ebuild:
